IGNITE-15107 Support DDL functionality. - Fixes #484.
Signed-off-by: zstan <stanilovsky@gmail.com>